--- a/index.html
+++ b/index.html
@@ -1,12 +1,323 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Девайс</title>
+</head>
+<body>
+<header class="page-header">
+  <section class="page-header__upper-level">
+    <section class="page-header__upper-level__left">
+      <nav class="page-header__upper-level__left__search">
+        <input class="page-header__upper-level__left__search__input" type="text" placeholder="Поиск по сайту">
+      </nav>
+    </section>
+    <section class="page-header__upper-level__right">
+      <section class="page-header__upper-level__right__profile">
+        <ul class="page-header__upper-level__right__profile__list">
+          <li class="page-header__upper-level__right__profile__list__item">
+            <a href="" class="page-header__upper-level__right__profile__list__item__link">Войти</a>
+          </li>
+        </ul>
+      </section>
+      <section class="page-header__upper-level__right__tools">
+        <ul class="page-header__upper-level__right__tools__list">
+          <li class="page-header__upper-level__right__tools__list__item">
+            <a href="#" class="page-header__upper-level__right__tools__list__item__link">Сравнить</a>
+          </li>
+          <li class="page-header__upper-level__right__tools__list__item">
+            <a href="#" class="page-header__upper-level__right__tools__list__item__link">Корзина</a>
+          </li>
+        </ul>
+      </section>
+    </section>
+  </section>
+  <section class="page-header__lower-level">
+    <div class="page-header__lower-level__left">
+      <section class="page-header__lower-level__left__catalog">
+        <header class="page-header__lower-level__left__catalog__header">
+          <a class="page-header__lower-level__left__catalog__header__link" href="#">Каталог товаров</a>
+        </header>
+      </section>
+    </div>
+    <div class="page-header__lower-level__right">
+      <ul class="page-header__lower-level__right__list">
+        <li class="page-header__lower-level__right__list__item">
+          <a href="#" class="page-header__lower-level__right__list__item__link">Доставка</a>
+        </li>
+        <li class="page-header__lower-level__right__list__item">
+          <a href="#" class="page-header__lower-level__right__list__item__link">Гарантия</a>
+        </li>
+        <li class="page-header__lower-level__right__list__item">
+          <a href="#" class="page-header__lower-level__right__list__item__link">Контакты</a>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="page-header__catalog">
+    <div class="page-header__catalog">
+      <div class="page-header__catalog__left">
+        <ul class="page-header__catalog__left__list">
+          <li class="page-header__catalog__left__list__item">
+            <a href="" class="page-header__catalog__left__list__item__link">Виртуальная реальнсть</a>
+          </li>
+          <li class="page-header__catalog__left__list__item">
+            <a href="" class="page-header__catalog__left__list__item__link">Моноподы для селфи</a>
+          </li>
+          <li class="page-header__catalog__left__list__item">
+            <a href="" class="page-header__catalog__left__list__item__link">Экшн-камеры</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-header__catalog__center">
+        <ul class="page-header__catalog__center__list">
+          <li class="page-header__catalog__center__list__item">
+            <a href="" class="page-header__catalog__center__list__item__link">Фитнес браслеты</a>
+          </li>
+          <li class="page-header__catalog__center__list__item">
+            <a href="" class="page-header__catalog__center__list__item__link">Умные часы</a>
+          </li>
+        </ul>
+      </div>
+      <div class="page-header__catalog__right">
+        <ul class="page-header__catalog__right__list">
+          <li class="page-header__catalog__right__list__item">
+            <a href="" class="page-header__catalog__right__list__item__link">Квадрокоптеры</a>
+          </li>
+        </ul>
+      </div> 
+    </div>
+  </section>
+</header>
+<main>
+  <article class="product-slider">
+    <div class="product-slider__container">
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
-  </body>
+    </div>
+    <section class="product-slider__photo">
+      <img src="#" alt="" class="product-slider__photo__image">
+    </section>
+    <section class="product-slider__info">
+      <header class="product-slider__info__header">Делай селфи, как Бен Стиллер</header>
+      <p class="product-slider__info__description">
+        Самая длинная палка для селфи в нашем магазине.
+        <br>
+        Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+      </p>
+      <section class="product-slider__info__controls">
+        <div class="product-slider__info__controls__details">
+          <button class="product-slider__info__controls__details__button">Подробнее</button>
+        </div>
+        <section class="product-slider__info__controls__options">
+          <ul class="product-slider__info__controls__options__list">
+            <li class="product-slider__info__controls__options__list__item">
+              <input type="text" class="product-slider__info__controls__options__list__item__button" id="product-slider_1">
+              <label for="product-slider_1"></label>
+            </li>
+            <li class="product-slider__info__controls__options__list__item">
+              <input type="text" class="product-slider__info__controls__options__list__item__button" id="product-slider_2">
+              <label for="product-slider_2"></label>
+            </li>
+            <li class="product-slider__info__controls__options__list__item">
+              <input type="text" class="product-slider__info__controls__options__list__item__button" id="product-slider_3">
+              <label for="product-slider_3"></label>
+            </li>
+          </ul>
+        </section>
+      </section>
+      <section class="product-slider__info__summary">
+        <section class="product-slider__info__summary__box">
+          <header class="product-slider__info__summary__box__title">8,5 м</header>
+          <span class="product-slider__info__summary__box__description">Длина палки</span>
+        </section>
+        <section class="product-slider__info__summary__box">
+          <header class="product-slider__info__summary__box__title">5 кг</header>
+          <span class="product-slider__info__summary__box__description">Вес палки</span>
+        </section>
+        <section class="product-slider__info__summary__box">
+          <header class="product-slider__info__summary__box__title">Карбон</header>
+          <span class="product-slider__info__summary__box__description">Материал</span>
+        </section>
+      </section>
+    </section>
+  </article>
+  <article class="product-market">
+    <section class="product-market__box">
+      <figure class="product-market__box__container">
+        <img class="product-market__box__container__photo" src="" alt="">
+        <figcaption class="product-market__box__container__description">
+          Виртуальная реальность
+        </figcaption>
+      </figure>
+    </section>
+    <section class="product-market__box">
+      <figure class="product-market__box__container">
+        <img class="product-market__box__container__photo" src="" alt="">
+        <figcaption class="product-market__box__container__description">
+          Моноплоды для селфи
+        </figcaption>
+      </figure>
+    </section>
+    <section class="product-market__box">
+      <figure class="product-market__box__container">
+        <img class="product-market__box__container__photo" src="" alt="">
+        <figcaption class="product-market__box__container__description">
+          Экшн-камеры
+        </figcaption>
+      </figure>
+    </section>
+    <section class="product-market__box">
+      <figure class="product-market__box__container">
+        <img class="product-market__box__container__photo" src="" alt="">
+        <figcaption class="product-market__box__container__description">
+          Фитнес-браслеты
+        </figcaption>
+      </figure>
+    </section>
+    <section class="product-market__box">
+      <figure class="product-market__box__container">
+        <img class="product-market__box__container__photo" src="" alt="">
+        <figcaption class="product-market__box__container__description">
+          Умные часы
+        </figcaption>
+      </figure>
+    </section>
+    <section class="product-market__box">
+      <figure class="product-market__box__container">
+        <img class="product-market__box__container__photo" src="" alt="">
+        <figcaption class="product-market__box__container__description">
+          Квадрокпотеры
+        </figcaption>
+      </figure>
+    </section>
+  </article>
+  <article class="delivery-slider">
+    <aside class="delivery-slider__options">
+      <ul class="delivery-slider__options__list">
+        <li class="delivery-slider__options__list_item delivery-slider__options__list_item--active">Доставка</li>
+        <li class="delivery-slider__options__list_item">Гарантия</li>
+        <li class="delivery-slider__options__list_item">Кредит</li>
+      </ul>
+    </aside>
+    <section class="delivery-slides">
+      <div class="delivery-slides__container delivery-slides__container--active">
+        <header class="delivery-slides__container__title">Доставка</header>
+        <p class="delivery-slides__container__description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду
+          совершенно бесплатно! Ведь мы не плохо заработаем, поднимая его на ваш этаж</p>
+      </div>
+      <div class="delivery-slides__container">
+        <header class="delivery-slides__container__title">Гарантия</header>
+        <p class="delivery-slides__container__description">Текст</p>
+      </div>
+      <div class="delivery-slides__container">
+        <header class="delivery-slides__container__title">Кредит</header>
+        <p class="delivery-slides__container__description">Текст</p>
+      </div>
+    </section>
+  </article>
+  <article class="promo-line">
+    <div class="promo-line__box">
+      <img src="#" alt="" class="promo-line__box__image">
+    </div>
+    <div class="promo-line__box">
+      <img src="#" alt="" class="promo-line__box__image">
+    </div>
+    <div class="promo-line__box">
+      <img src="#" alt="" class="promo-line__box__image">
+    </div>
+    <div class="promo-line__box">
+      <img src="#" alt="" class="promo-line__box__image">
+    </div>
+    <div class="promo-line__box">
+      <img src="#" alt="" class="promo-line__box__image">
+    </div>
+  </article>
+  <section class="information">
+    <section class="information__about">
+      <header class="information__about__title">О нас</header>
+      <div class="information__about__description">
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными
+          компаниями:</p>
+      </div>
+      <div class="information__about__services">
+        <ul class="information__about__services__list">
+          <li class="information__about__services__list__item">Деловые Линии</li>
+          <li class="information__about__services__list__item">Автотрейдинг</li>
+          <li class="information__about__services__list__item">ЖелДорЭкспедиция</li>
+        </ul>
+      </div>
+      <p class="information__about__details-button">
+        <a href="#" class="information__about__details-button__link">Подробнее о нас</a>
+      </p>
+    </section>
+    <section class="information__contacts">
+      <header class="information__contacts__title">Контакты</header>
+      <p class="information__contacts__description">Вы можете забрать товар сами, заехав в наш офис. Заодно вы сможете
+        проверить работоспособность покупки. Всякое бывает: </p>
+      <div class="information__contacts__map">
+        <img class="information__contacts__map__preview" alt="" src="#">
+      </div>
+      <a href="#" class="information__contacts-feedback">Напишите нам</a>
+    </section>
+  </section>
+</main>
+<footer class="page-footer">
+  <section class="page-footer__left">
+    <div class="page-footer__left__logo">
+      <img src="#" alt="" class="page-footer__left__logo__image">
+    </div>
+    <address class="page-footer__left__address" >
+      г. Москва, ул. Строителей, 15
+    </address>
+  </section>
+  <section class="page-footer__center">
+    <nav class="page-footer__center__menu">
+      <ul class="page-footer__center__menu__list">
+        <li class="page-footer__center__menu__list__item">
+          <a href="" class="page-footer__center__menu__list__item__link">Доставка</a>
+        </li>
+        <li class="page-footer__center__menu__list__item">
+          <a href="" class="page-footer__center__menu__list__item__link">Гарантия</a>
+        </li>
+        <li class="page-footer__center__menu__list__item">
+          <a href="" class="page-footer__center__menu__list__item__link">Контакты</a>
+        </li>
+      </ul>
+    </nav>
+    <section class="page-footer__center__social">
+      <ul class="page-footer__center__social__list">
+        <li class="page-footer__center__social__item">
+          <a href="" class="page-footer__center__social__item__link"></a>
+        </li>
+        <li class="page-footer__center__social__item">
+          <a href="" class="page-footer__center__social__item__link"></a>
+        </li>
+        <li class="page-footer__center__social__item">
+          <a href="" class="page-footer__center__social__item__link"></a>
+        </li>
+      </ul>
+    </section>
+  </section>
+  <section class="page-footer__right">
+    <section class="page-footer__right__shortcuts">
+      <ul class="page-footer__right__shortcuts__list">
+        <li class="page-footer__right__shortcuts__list__item">
+          <a href="#" class="page-footer__right__shortcuts__list__item__link">Войти</a>
+        </li>
+        <li class="page-footer__right__shortcuts__list__item">
+          <a href="#" class="page-footer__right__shortcuts__list__item__link">Сравнить</a>
+        </li>
+        <li class="page-footer__right__shortcuts__list__item">
+          <a href="#" class="page-footer__right__shortcuts__list__item__link">Корзина</a>
+        </li>
+      </ul>
+    </section>
+    <address class="page-footer__right__phone-number">Тел: +7(495) 495-95-95</address>
+    <div class="page-footer__right__copyright">
+      <a href="#" class="page-footer__right__copyright__image"></a>
+    </div>
+  </section>
+</footer>
+</body>
 </html>
