--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <link href="css/style.css" rel="stylesheet">
   <title>HTML Academy: Девайс</title>
 </head>
 <body>
@@ -29,7 +30,7 @@
       <nav class="page-header__nav">
         <ul class="page-header__nav-list">
           <li class="page-header__nav-item">
-            <a href="#">Каталог товаров</a>
+            <a href="#" class="page-header__nav-link">Каталог товаров</a>
             <ul class="page-header__nav-goods">
               <li><a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a></li>
               <li><a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a></li>
@@ -132,7 +133,7 @@
         <section class="products__items-container">
           <article class="products__items-item">
             <figure class="products__items-item-container">
-              <img src="#" alt="">
+              <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
               <figcaption class="products__items-item-description">
                 <a href="#" class="products__items-item-link">Любительская селфи-палка</a>
                 <span class="products__items-item-price">500 руб.</span>
@@ -145,7 +146,7 @@
           </article>
           <article class="products__items-item">
             <figure class="products__items-item-container">
-              <img src="#" alt="">
+              <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
               <figcaption class="products__items-item-description">
                 <a href="#" class="products__items-item-link">Профессиональная селфи-палка</a>
                 <span class="products__items-item-price">1 500 руб.</span>
@@ -158,7 +159,7 @@
           </article>
           <article class="products__items-item">
             <figure class="products__items-item-container">
-              <img src="#" alt="">
+              <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
               <figcaption class="products__items-item-description">
                 <a href="#" class="products__items-item-link">Непотопляемая селфи-палка</a>
                 <span class="products__items-item-price">2 500 руб.</span>
@@ -171,7 +172,7 @@
           </article>
           <article class="products__items-item products__items-item_new">
             <figure class="products__items-item-container">
-              <img src="#" alt="">
+              <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
               <figcaption class="products__items-item-description">
                 <a href="#" class="products__items-item-link">Селфи-палка «Следуй за мной»</a>
                 <span class="products__items-item-price">4 900 руб.</span>
