--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <link href="css/style.css" rel="stylesheet">
   <title>HTML Academy: Девайс</title>
 </head>
 <body>
@@ -29,7 +30,7 @@
       <nav class="page-header__nav">
         <ul class="page-header__nav-list">
           <li class="page-header__nav-item">
-            <a href="#">Каталог товаров</a>
+            <a href="#" class="page-header__nav-link">Каталог товаров</a>
             <ul class="page-header__nav-goods">
               <li><a class="page-header__nav-goods-link" href="#">Виртуальная реальность</a></li>
               <li><a class="page-header__nav-goods-link" href="#">Фитнесс-браслеты</a></li>
@@ -52,7 +53,7 @@
     <section class="slider-promo">
       <article class="slider-promo__item">
         <figure class="slider-promo__item-container">
-          <img src="#" alt="" class="slider-promo__item-photo">
+          <img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи" class="slider-promo__item-photo">
         </figure>
         <section class="slider-promo__item-info">
           <h2 class="slider-promo__item-info-title">Делай селфи,
@@ -80,13 +81,13 @@
       </article>
       <article class="slider-promo__item">
         <figure class="slider-promo__item-container">
-          <img src="#" alt="" class="slider-promo__item-photo">
+          <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующие фитнеc-браслеты" class="slider-promo__item-photo">
         </figure>
         <section class="slider-promo__item-info">
           <h2 class="slider-promo__item-info-title">Худеем
             правильно!</h2>
           <p class="slider-promo__item-info-description">
-            Мотивирующие фитнесc-браслеты помогут найти в себе силы не пропускать
+            Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать
             занятия и соблюдать диету.
           </p>
           <a href="#" class="btn slider-promo__item-info-btn">Подробнее</a>
@@ -100,7 +101,7 @@
       </article>
       <article class="slider-promo__item">
         <figure class="slider-promo__item-container">
-          <img src="#" alt="" class="slider-promo__item-photo">
+          <img src="img/slider-3.png" width="526" height="334" alt="обычный, на первый взгляд, квадрокоптер" class="slider-promo__item-photo">
         </figure>
         <section class="slider-promo__item-info">
           <h2 class="slider-promo__item-info-title">Порхает как бабочка,
@@ -134,7 +135,7 @@
       <article class="categories__box">
         <a href="#" class="categories__box-container">
           <div class="categories__box-image">
-            <img src="#" alt="">
+            <img src="img/popular-1.svg" width="97" height="55" alt="Виртуальная реальность">
           </div>
           <h3 class="categories__box-title">Виртуальная реальность</h3>
         </a>
@@ -142,7 +143,7 @@
       <article class="categories__box">
         <a href="#" class="categories__box-container">
           <div class="categories__box-image">
-            <img src="#" alt="">
+            <img src="img/popular-2.svg" width="86" height="117" alt="Моноподы для селфи">
           </div>
           <h3 class="categories__box-title">Моноподы для селфи</h3>
         </a>
@@ -150,7 +151,7 @@
       <article class="categories__box">
         <a href="#" class="categories__box-container">
           <div class="categories__box-image">
-            <img src="#" alt="">
+            <img src="img/popular-3.svg" width="71" height="87" alt="Экшн-камеры">
           </div>
           <h3 class="categories__box-title">Экшн-камеры</h3>
         </a>
@@ -158,7 +159,7 @@
       <article class="categories__box">
         <a href="#" class="categories__box-container">
           <div class="categories__box-image">
-            <img src="#" alt="">
+            <img src="img/popular-4.svg" width="108" height="61" alt="Фитнес браслеты">
           </div>
           <h3 class="categories__box-title">Фитнес браслеты</h3>
         </a>
@@ -166,7 +167,7 @@
       <article class="categories__box">
         <a href="#" class="categories__box-container">
           <div class="categories__box-image">
-            <img src="#" alt="">
+            <img src="img/popular-5.svg" width="56" height="98" alt="Умные часы">
           </div>
           <h3 class="categories__box-title">Умные часы</h3>
         </a>
@@ -174,7 +175,7 @@
       <article class="categories__box">
         <a href="#" class="categories__box-container">
           <div class="categories__box-image">
-            <img src="#" alt="">
+            <img src="img/popular-6.svg" width="132" height="69" alt="Квадрокоптеры">
           </div>
           <h3 class="categories__box-title">Квадрокоптеры</h3>
         </a>
@@ -212,9 +213,26 @@
   <div class="container">
     <section class="partners">
       <ul class="partners__list">
-        <li class="partners__list-item"><a href="#" class="partners__list-link"><img src="#" alt=""></a></li>
-        <li class="partners__list-item"><a href="#" class="partners__list-link"><img src="#" alt=""></a></li>
-        <li class="partners__list-item"><a href="#" class="partners__list-link"><img src="#" alt=""></a></li>
+        <li class="partners__list-item">
+          <a href="#" class="partners__list-link">
+            <img src="img/partners-1.jpg" width="260" height="100" alt="Dji">
+          </a>
+        </li>
+        <li class="partners__list-item">
+          <a href="#" class="partners__list-link">
+            <img src="img/partners-2.jpg" width="260" height="100" alt="SPGadgets">
+          </a>
+        </li>
+        <li class="partners__list-item">
+          <a href="#" class="partners__list-link">
+            <img src="img/partners-3.jpg" width="260" height="100" alt="GoPro">
+          </a>
+        </li>
+        <li class="partners__list-item">
+          <a href="#" class="partners__list-link">
+            <img src="img/partners-4.jpg" width="260" height="100" alt="VIVE">
+          </a>
+        </li>
       </ul>
     </section>
     <div class="company-info">
@@ -237,7 +255,7 @@
         <p class="company-info__contacts-annotation">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете
           проверить работоспособность покупки. Всякое бывает.</p>
         <div class="company-info__contacts-map">
-          <!-- Yandex widget here ? -->
+          <!-- JS Yandex widget -->
         </div>
         <button class="btn company-info__contacts-btn">Напишите нам</button>
       </section>
@@ -282,7 +300,7 @@
         Тел.: +7 (495) 495-95-95
       </address>
       <div class="page-footer__copyright">
-        <a href="#"></a>
+        <a href="#"><img src="img/logo-html.png" width="27" height="35" alt="HTMLAcademy"></a>
       </div>
     </div>
   </div>
