--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <title>HTML Academy: Девайс</title>
 </head>
 <body>
-<header class="page-header container">
+<header class="page-header page-header_catalog container">
   <div class="page-header-wrapper">
     <h1 class="page-header__logo">Device</h1>
     <div class="page-header__actions">
@@ -69,7 +69,7 @@
 </header>
 <main>
   <div class="container">
-    <h1 class="catalog-title">Каталог товаров сайта</h1>
+    <h1 class="catalog-title">Моноподы для селфи</h1>
     <article class="breadcrumbs">
       <h2 class="visually-hidden">Где я сейчас?</h2>
       <ul class="breadcrumbs-list">
@@ -201,7 +201,7 @@
           </article>
           <article class="products__items-item products__items-item_new">
             <h2 class="visually-hidden">Селфи-палка «Следуй за мной»</h2>
-            <figure class="products__items-item-container">
+            <figure class="products__items-item-container products__items-item-container_new">
               <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
               <figcaption class="products__items-item-description">
                 <a href="#" class="products__items-item-link">Селфи-палка «Следуй за мной»</a>
@@ -216,8 +216,8 @@
           <section class="pagination">
             <h2 class="visually-hidden">Постраничная навигация</h2>
             <ul class="pagination__list">
-              <li class="pagination__item">
-                <a href="#" class="pagination__item-link pagination__item-link_btn-back">Назад</a>
+              <li class="pagination__item pagination__item-back">
+                <a href="#" class="pagination__item-link">Назад</a>
               </li>
               <li class="pagination__item">
                 <a href="#" class="pagination__item-link pagination__item-link_active">1</a>
@@ -228,8 +228,8 @@
               <li class="pagination__item">
                 <a href="#" class="pagination__item-link">3</a>
               </li>
-              <li class="pagination__item">
-                <a href="#" class="pagination__item-link pagination__item-link_btn-forward">Вперед</a>
+              <li class="pagination__item pagination__item-forward">
+                <a href="#" class="pagination__item-link">Вперед</a>
               </li>
             </ul>
           </section>
@@ -238,7 +238,7 @@
     </div>
   </section>
 </main>
-<footer class="page-footer">
+<footer class="page-footer page-footer_catalog">
   <div class="container">
     <div class="page-footer__info">
       <a href="#" class="logotype page-footer__info-logotype">Device</a>
