--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         Тел.: +7 (495) 495-95-95
       </address>
       <div class="page-footer__copyright">
-        <a class="page-footer__copyright-link" href="#">
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/htmlcss">
           <img class="page-footer__copyright-image" src="img/logo-html.png" width="27" height="35" alt="HTMLAcademy">
         </a>
       </div>
@@ -391,7 +391,7 @@
   <div class="modal-map__container">
     <h2 class="visually-hidden modal-map__container-title">Как до нас добраться</h2>
     <p class="modal-map__container-map-no-js">
-      <img src="img/map.jpg" width="100%" height="100%" alt="Наш офис по адресу ул. Хуббы-буббы дом 1 ОАО 'Академия ХТМЛ'">
+      <img src="img/map.jpg" width="560" height="222" alt="Наш офис по адресу ул. Хуббы-буббы дом 1 ОАО 'Академия ХТМЛ'">
     </p>
     <div class="modal-map__yandex-map" id="yandex-map"></div>
   </div>
