Minify CSS and JS.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
   <title>HTML Academy: Девайс</title>
 </head>
 <body>
@@ -413,6 +413,6 @@
   </div>
 </section>
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-<script src="js/script.js" type="text/javascript"></script>
+<script src="js/script.min.js" type="text/javascript"></script>
 </body>
 </html>
